# Proyecto1-Datos-II

./: .gitignore  README.md
proyecto_I/: CMakeLists.txt  Lista.hpp  LogServer.json  VSPtr.hpp  cliente  cliente.cpp  cliente.hpp  datos.txt  garbagecollector.cpp  garbagecollector.hpp  main.cpp  puntero.cpp  puntero.hpp  server  server.cpp  singleton.cpp  singleton.hpp
proyecto_I/html/: _lista_8hpp_source.html  _nodo_8hpp_source.html  _v_s_ptr_8hpp.html  _v_s_ptr_8hpp_source.html  annotated.html  class_cliente-members.html  class_cliente.html  class_garbage_collector-members.html  class_garbage_collector.html  class_lista-members.html  class_lista.html  class_m_d5-members.html  class_m_d5.html  class_nodo-members.html  class_nodo.html  class_puntero-members.html  class_puntero.html  class_singleton-members.html  class_singleton.html  class_v_s_ptr-members.html  class_v_s_ptr.html  classes.html  cliente_8cpp.html  cliente_8cpp_source.html  cliente_8hpp.html  cliente_8hpp_source.html  dir_2f0263b7468a728d60f24f13c064ccc2.html  files.html  functions.html  functions_func.html  functions_vars.html  garbagecollector_8cpp_source.html  garbagecollector_8hpp.html  garbagecollector_8hpp_source.html  hierarchy.html  main_8cpp_source.html  md5_8cpp_source.html  md5_8h_source.html  p_server_2md5_8cpp_source.html  p_server_2md5_8h_source.html  (+7 more)
proyecto_I/html/search/: all_1.js  all_2.js  all_4.js  all_5.js  all_7.js  all_8.js  (+23 more)
proyecto_I/pServer/: LogServer.json  ServerData.json  a.out  server  server.cpp
proyecto_I/rtf/: dir_2f0263b7468a728d60f24f13c064ccc2.rtf  refman.rtf
(+73 files in other folders)
